# spend-shield-AI

./: .env.example  .gcloudignore  .gitignore  DASHBOARD_GUIDE.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  cloudbuild.yaml  deploy.sh  deploy_cloudrun.ps1  deploy_docker.ps1  docker-compose.yml  pyproject.toml  requirements.txt  run_live.ps1  run_local.ps1
app/: __init__.py  db.py  graph.py  live.py  main.py  simple.py
static/: index.html
static/css/: styles.css
static/js/: app.js
tests/: __init__.py  test_fraud_detection.py
